bat.string1.lessons.bat.string1.StringYak.scala.error
stringYak:11: error: not found: value i
  s+=str.drop(i)
              ^